# RAG_Project

./: .dockerignore  .env  .gitignore  .vercelignore  Dockerfile  README.md  ingest.py  main.py  pyproject.toml  requirements.final  requirements.txt  requirements.txt.final  requirements.txt.fixed  requirements.txt.new  server.py  vercel.json
Notebook/: document.ipynb
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  ThemeContext.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  Loader.jsx
repo-backup.git/: config  packed-refs
repo-filter.git/: config  packed-refs
repo-filter.git/filter-repo/: commit-map  first-changed-commits  ref-map
repo-filter.git/info/: refs
repo-filter.git/objects/info/: commit-graph  packs
repo-filter.git/objects/pack/: pack-7694eb3062c9a0081320801a8670c71af8ce57ef.bitmap  pack-7694eb3062c9a0081320801a8670c71af8ce57ef.idx  pack-7694eb3062c9a0081320801a8670c71af8ce57ef.pack  pack-7694eb3062c9a0081320801a8670c71af8ce57ef.rev
repo-filter.git/refs/remotes/origin/: main
